# infobez-quiz

./: README.md  app.py  gunicorn.conf.py  init_db.py  pyproject.toml
static/: matrix.js  styles.css
templates/: base.html
templates/admin/: index.html  qrcode.html  rating.html
templates/client/: enter_nick.html  index.html  question.html  result.html
