[project]
name = "quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "saikonohack",email = "saintklovus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
